# GIS

core/src/: CMakeLists.txt
core/src/render/2d/: choropleth_map.cpp  choropleth_map.h  general_2d.h  heatmap.h  pointmap.h  render_builder_impl.h
core/src/render/arrow/: render_api.cpp  render_api.h
core/src/render/utils/color/: color_gradient.h
core/unittest/gis/cpp/: CMakeLists.txt
core/unittest/render/: choropleth_map_test.cpp
cpp/src/: CMakeLists.txt
cpp/src/arrow/: render_api.cpp  render_api.h
cpp/src/render/: render_builder.h  render_builder_impl.h
cpp/src/render/2d/: choropleth_map.cpp  choropleth_map.h  general_2d.cpp  general_2d.h  heatmap.h  pointmap.cpp  pointmap.h  render_builder.h  render_builder_impl.h  weighted_pointmap.cpp  weighted_pointmap.h
cpp/src/render/2d/choropleth_map/: choropleth_map.cpp  choropleth_map.h
cpp/src/render/2d/heatmap/: heatmap.cpp  heatmap.h  set_color.inl
cpp/src/render/2d/scatter_plot/: pointmap.cpp  pointmap.h  weighted_pointmap.cpp
cpp/src/render/utils/color/: color.h  color_gradient.cpp  color_gradient.h
cpp/unittest/: CMakeLists.txt
cpp/unittest/render/: CMakeLists.txt  choropleth_map_test.cpp  weighted_pointmap_test.cpp
python/arctern/geodataframe/: geodataframe.py
python/test/vega/: vega_example.txt
python/tests/geodataframe/: dataframe_test.py
scala/: README.md  build.sbt
scala/src/main/scala/: PointUDT.scala
scala/src/test/scala/: AdapterTest.scala  ConstructorsTest.scala  FunctionsTest.scala  IndexTest.scala  UDTTest.scala
(+32 files in other folders)
