set(pointmap_test_src ${unittest_srcs} pointmap_test.cpp)
add_executable(pointmap_tests ${pointmap_test_src})
target_link_libraries(pointmap_tests ${unittest_libs})
set(heatmap_test_src ${unittest_srcs} heatmap_test.cpp)
add_executable(heatmap_tests ${heatmap_test_src})
target_link_libraries(heatmap_tests ${unittest_libs})
set(choropleth_map_test_src ${unittest_srcs} choropleth_map_test.cpp)
add_executable(choropleth_map_test ${choropleth_map_test_src})
target_link_libraries(choropleth_map_test ${unittest_libs})
